--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "node": "^19.0.0",
